--- a/pom.xml
+++ b/pom.xml
@@ -376,7 +376,7 @@
 		<owasp-esapi.version>2.1.0.1</owasp-esapi.version>
 		<owasp-encoder.version>1.2.2</owasp-encoder.version>
 		<owasp-html-sanitizer.version>20180219.1</owasp-html-sanitizer.version>
-		<shiro-biz.version>1.0.4-SNAPSHOT</shiro-biz.version>
+		<shiro-biz.version>1.0.5.RELEASE</shiro-biz.version>
 	</properties> 
 
 	<dependencies>
