--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
-	<groupId>com.github.vindell</groupId>
+	<groupId>com.github.hiwepy</groupId>
 	<artifactId>spring-boot-starter-shiro-antisamy</artifactId>
 	<description>Spring Boot Starter For Shiro With Owasp Antisamy</description>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
-	<url>https://github.com/vindell/${project.artifactId}</url>
+	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -26,15 +26,15 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:https:github.com/vindell/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:https:github.com/vindell/${project.artifactId}.git</developerConnection>
-		<url>https:github.com/vindell/${project.artifactId}</url>
+		<connection>scm:git:https:github.com/hiwepy/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:https:github.com/hiwepy/${project.artifactId}.git</developerConnection>
+		<url>https:github.com/hiwepy/${project.artifactId}</url>
 		<tag>${project.artifactId}</tag>
 	</scm>
 
 	<developers>
 		<developer>
-			<name>vindell</name>
+			<name>wandl</name>
 			<email>hnxyhcwdl1003@163.com</email>
 			<roles>
 				<role>developer</role>
@@ -376,7 +376,7 @@
 		<owasp-esapi.version>2.1.0.1</owasp-esapi.version>
 		<owasp-encoder.version>1.2.2</owasp-encoder.version>
 		<owasp-html-sanitizer.version>20180219.1</owasp-html-sanitizer.version>
-		<shiro-biz.version>1.0.5.RELEASE</shiro-biz.version>
+		<shiro-biz.version>1.0.8-SNAPSHOT</shiro-biz.version>
 	</properties> 
 
 	<dependencies>
@@ -452,7 +452,7 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.github.vindell</groupId>
+		    <groupId>com.github.hiwepy</groupId>
 			<artifactId>shiro-biz</artifactId>
 			<version>${shiro-biz.version}</version>
 		</dependency>
